<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">All Lights Off</string>
    <string name="description_splash_icon">A head in a box presents</string>
    <string name="description_menu">Main menu</string>
    <string name="description_levels">Select level</string>
    <string name="description_previous">Previous level</string>
    <string name="description_reset">Reset level</string>
    <string name="description_next">Next level</string>
    <string name="description_undo">Undo</string>
    <string name="description_help">Help</string>
    <string name="button_play">Play Game</string>
    <string name="button_level">Select Level</string>
    <string name="button_settings">Settings</string>
    <string name="button_help">How to play</string>
    <string name="button_about">About Me</string>
    <string name="button_back_to_main">Back to main menu</string>
    <string name="message_gold">Perfect!</string>
    <string name="message_silver">Well done!</string>
    <string name="message_bronze">Not bad!</string>
    <string name="message_bad">At least you finished it</string>
    <string name="message_hints">Nice! Now clear the level without hints to save it</string>
    <string name="toast_open_menu">Press again to open the home menu</string>
    <string name="toast_select_level">Press again to select another level</string>
    <string name="toast_reset_board">Press again to reset the level</string>
    <string name="toast_next_level">Press again to advance to the next level</string>
    <string name="toast_prev_level">Press again to go to the previous level</string>
    <string name="toast_close_app">Press again to close the app</string>
    <string name="toast_leave_game">Press again to end the current game</string>
    <string name="toast_show_solution">Press again to show the solution</string>
    <string name="toast_locked_level">Clear the previous levels to access this one</string>
    <string name="header_select_level">Select level</string>
    <string name="header_settings">Settings</string>
    <string name="header_help">How to play</string>
    <string name="setting_music">Music</string>
    <string name="setting_sound">Sound effects</string>
    <string name="setting_reset">Wipe level data</string>
    <string name="setting_language">Language</string>
    <string name="setting_tile">Tile style</string>
    <plurals name="number_of_moves">
        <item quantity="zero">Level cleared in 0 moves</item>
        <item quantity="one">Level cleared in 1 move</item>
        <item quantity="other">Level cleared in %d moves</item>
    </plurals>
    <string name="help_paragraph1">The objective of the game is to switch off all the lights on the board.\nTouching a tile will flip it and the tiles that are up, down, left and right:</string>
    <string name="help_paragraph2">Below the board is the following row of controls:</string>
    <string name="help_paragraph3">Opens the Main menu.</string>
    <string name="help_paragraph4">Opens the list of levels available.</string>
    <string name="help_paragraph5">Goes to the previous level.</string>
    <string name="help_paragraph6">Resets the current level.</string>
    <string name="help_paragraph7">Advances to the next level.</string>
    <string name="help_paragraph8">Undoes the last action.\nIt can only be used once in a row.</string>
    <string name="help_paragraph9">Shows the solution for the current pattern.\nNote that by using this the current level will not be saved and the next level will not be unlocked.</string>
    <string name="help_paragraph10">If there is a game being played some of these actions will require a confirmation.</string>
    <string name="help_paragraph11">Above the board is displayed the level number, the name, and the stars achieved for that level.\nWhen you start a game the stars are updated to show your current achievement as you make the moves:</string>
    <string name="help_paragraph12">Star achieved</string>
    <string name="help_paragraph13">Star not achieved</string>
    <string name="help_paragraph14">This star can be achieved on the current gameplay, as long as you are making the right moves.</string>
    <string name="help_paragraph15">This star cannot be achieved on the current gameplay because you have made too many moves.</string>
    <string name="help_paragraph16">You can clear the board with 3 stars (gold) if you use the minimum number of moves.\nIf you need more moves, you may receive 2 starts (silver), one star (bronze), or no star at all (pewter).\nClearing the board will always unlock the next level.\nThe game will only update your saved achievement if it is better.</string>
    <string name="help_paragraph17">Below the stars the game displays the number of moves available for each achievement:</string>
    <string name="help_paragraph18">As you consume your moves the tokens will disappear and the stars will update accordingly.</string>
    <string name="help_paragraph19">When you clear the board a message window will appear on screen showing your result:</string>
    <string name="help_paragraph20">Touching that window will advance you to the next level or just restart the current game if you have used the help.</string>
    <string name="help_level_name">Level name</string>
    <string name="help_level_number" translatable="false">150</string>
    <string-array name="level_names" tools:ignore="Typos">
        
        <item>Tutorial 1</item>
        <item>Tutorial 2</item>
        <item>Tutorial 3</item>
        <item>Tutorial 4</item>
        <item>Tutorial 5</item>
        <item>Tutorial 6</item>
        <item>Tutorial 7</item>
        <item>Tutorial 8</item>
        <item>Tutorial 9</item>
        <item>Tutorial 10</item>
        
        <item>The catcher</item>
        <item>Chirp chirp</item>
        <item>Big head dog</item>
        <item>High five</item>
        <item>Contraction</item>
        <item>The duel</item>
        
        <item>China shoes</item>
        <item>Empty</item>
        <item>On the ledge</item>
        <item>Speed bump</item>
        <item>It\'s the claw!</item>
        <item>The ribbon</item>
        <item>Mini uzi</item>
        <item>Releasing a bird</item>
        <item>Very small scope</item>
        <item>Climbing the wall</item>
        
        <item>Are you looking to me?</item>
        <item>Bright knight</item>
        <item>For whom tolls?</item>
        <item>Floating hidrogen</item>
        <item>Mermaid\'s end</item>
        <item>The team</item>
        <item>Gun sight</item>
        <item>Four feet</item>
        <item>Tetris gone wrong</item>
        <item>Bent 101</item>
        
        <item>Full hashtag</item>
        <item>Rolling trick</item>
        <item>Mr. Nosey</item>
        <item>Dripping dots</item>
        <item>Frogger</item>
        <item>Grab the ball</item>
        <item>Ant-ennas</item>
        <item>Displaced corner</item>
        <item>Möbius trip</item>
        <item>You are here</item>
        
        <item>Three little pegs</item>
        <item>Locker room I</item>
        <item>Vegan hamburger</item>
        <item>Throwing boomerangs</item>
        <item>Very close close-up</item>
        <item>Ready for battle</item>
        <item>Locker room II</item>
        <item>Timeless</item>
        <item>Boomerangs return</item>
        <item>The fan</item>
        
        <item>Venetian party</item>
        <item>Not the way out!</item>
        <item>Lonely Tetris</item>
        <item>Eolic energy</item>
        <item>That\'s the way out!</item>
        <item>Prince\'s coronet</item>
        <item>The D-day</item>
        <item>Broken polyhedron</item>
        <item>Mutant hashtag</item>
        <item>Square lamp</item>
        
        <item>King\'s crown</item>
        <item>Hammerhead monster</item>
        <item>Double divide</item>
        <item>The pillar</item>
        <item>Acquaintances</item>
        <item>Meow meow prrr</item>
        <item>The goblet</item>
        <item>Convergence</item>
        <item>The rotten eight</item>
        <item>The right to the left</item>
        
        <item>Two-sided letter</item>
        <item>Isosceles</item>
        <item>Starring</item>
        <item>The classroom</item>
        <item>Snake eyes</item>
        <item>Kryptonite</item>
        <item>Literally surrounded</item>
        <item>Chess corner</item>
        <item>The popular student</item>
        <item>3 vs 3</item>
        
        <item>The F-world</item>
        <item>The meeting</item>
        <item>Stealth flight</item>
        <item>Sausage dog</item>
        <item>To heaven</item>
        <item>Elektra\'s tools</item>
        <item>Sir Lancelot</item>
        <item>Ronald fries</item>
        <item>The M-world</item>
        <item>Wolverine\'s wound</item>
        <item>Red or white?</item>
        <item>Overlook hotel</item>
        <item>A landed letter</item>
        
        <item>80 kg</item>
        <item>Hug me please</item>
        <item>Just a box</item>
        <item>A pale blue dot</item>
        <item>Thick grid</item>
        <item>Me and myself</item>
        <item>Despicable minion</item>
        <item>Belly button</item>
        <item>The ambush I</item>
        <item>Does not subtract</item>
        <item>Not Pac-Man</item>
        <item>Falling sky</item>
        
        <item>The Zorro</item>
        <item>Abstract I</item>
        <item>Parcheesi</item>
        <item>The N-world</item>
        <item>Unibrow cry</item>
        <item>V for vendetta</item>
        <item>Ka-Boom!</item>
        <item>Abstract II</item>
        <item>Hole in the jail</item>
        
        <item>A helmet</item>
        <item>Rubik\'s cube</item>
        <item>Centaur tennis</item>
        <item>Little snake eyes</item>
        <item>Poseidon</item>
        <item>Wolverine\'s handshake</item>
        <item>Strike or split</item>
        <item>Speed chess</item>
        <item>One hundred</item>
        <item>Air strike</item>
        
        <item>Flux capacitor</item>
        <item>The B-world</item>
        <item>Gorgon signaling</item>
        <item>The lobster</item>
        <item>Blind centaur knight</item>
        <item>Perfect pitch</item>
        <item>Bottom of the box</item>
        <item>Hollow diamond</item>
        <item>Ballroom dancers</item>
        <item>Trending topic</item>
        <item>Dot on grid</item>
        <item>Infinitive</item>
        
        <item>Very Best friend</item>
        <item>Water gun</item>
        <item>The ambush II</item>
        <item>Marks the spot</item>
        <item>Empty shelves</item>
        <item>Too much time</item>
        <item>Powered WiFi</item>
        <item>Hard work</item>
    </string-array>
    <string name="tile_code_on" translatable="false">O</string>
    <string name="tile_code_off" translatable="false">·</string>
    <string name="example_code" translatable="false">···___·O··O·_>_O·O···___·O·</string>
</resources>