<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/medium_margin"
    android:paddingLeft="@dimen/medium_margin"
    android:paddingRight="@dimen/medium_margin"
    android:paddingTop="@dimen/medium_margin"
    android:weightSum="14"
    tools:context=".MenuActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:padding="@dimen/medium_margin"
        android:scaleType="fitCenter"
        android:src="@drawable/title_header"
        android:textSize="@dimen/huge_text"/>

    <Button
        android:id="@+id/menu1"
        style="@style/MenuButton"
        android:drawableEnd="@drawable/ic_menu_button_play"
        android:drawableRight="@drawable/ic_menu_button_play"
        android:onClick="openGame"
        android:text="@string/button_play"/>

    <Button
        android:id="@+id/menu2"
        style="@style/MenuButton"
        android:drawableEnd="@drawable/ic_menu_button_level"
        android:drawableRight="@drawable/ic_menu_button_level"
        android:onClick="openLevels"
        android:text="@string/button_level"/>

    <Button
        android:id="@+id/menu3"
        style="@style/MenuButton"
        android:drawableEnd="@drawable/ic_menu_button_settings"
        android:drawableRight="@drawable/ic_menu_button_settings"
        android:onClick="openSettings"
        android:text="@string/button_settings"/>

    <Button
        android:id="@+id/menu4"
        style="@style/MenuButton"
        android:drawableEnd="@drawable/ic_menu_button_guide"
        android:drawableRight="@drawable/ic_menu_button_guide"
        android:onClick="openHelp"
        android:text="@string/button_help"/>

    <Button
        android:id="@+id/menu5"
        style="@style/MenuButton"
        android:drawableEnd="@drawable/ic_menu_button_about"
        android:drawableRight="@drawable/ic_menu_button_about"
        android:onClick="openAbout"
        android:text="@string/button_about"/>

</LinearLayout>
