<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aheadinabox.alllightsoff.LevelsActivity">

    <TextView
        android:id="@+id/header"
        style="@style/TextHeader"
        android:text="@string/header_settings"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/header"
        android:columnWidth="96dp"
        android:fadingEdgeLength="16dp"
        android:gravity="center"
        android:horizontalSpacing="16dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="auto_fit"
        android:padding="@dimen/medium_margin"
        android:requiresFadingEdge="vertical"
        android:scrollbarStyle="outsideOverlay"
        android:stretchMode="spacingWidth"
        android:verticalSpacing="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:gravity="center"
                android:text="@string/setting_sound"
                android:textColor="@color/colorTextSettings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/large_margin"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_marginRight="@dimen/large_margin"
                    android:src="@drawable/setting_music_on"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_marginRight="@dimen/large_margin"
                    android:src="@drawable/setting_sound_on"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="center"
                android:text="@string/setting_language"
                android:textColor="@color/colorTextSettings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="@dimen/large_margin"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_marginRight="@dimen/large_margin"
                    android:src="@drawable/setting_english_on"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/large_margin"
                    android:layout_marginRight="@dimen/large_margin"
                    android:src="@drawable/setting_spanish_off"/>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/medium_margin"
                android:layout_marginTop="@dimen/large_margin"
                android:gravity="center"
                android:text="@string/setting_tile"
                android:textColor="@color/colorTextSettings"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/tile1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:src="@drawable/tile_on"/>

                <ImageView
                    android:id="@+id/tile2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:src="@drawable/tile_off"/>

                <ImageView
                    android:id="@+id/tile3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/medium_margin"
                    android:layout_marginRight="@dimen/medium_margin"
                    android:src="@drawable/tile_solution"/>

            </LinearLayout>

            <Button
                style="@style/MenuButton"
                android:layout_margin="@dimen/medium_margin"
                android:onClick="resetLevels"
                android:text="@string/setting_reset"/>

            <Button
                android:id="@+id/back"
                style="@style/MenuButton"
                android:drawableEnd="@drawable/ic_menu_button_menu"
                android:drawableRight="@drawable/ic_menu_button_menu"
                android:onClick="backToMenu"
                android:text="@string/button_back_to_main"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
